# sdk-nrf

./: CODEOWNERS  west.yml
applications/matter_bridge/: CMakeLists.txt
applications/matter_weather_station/: CMakeLists.txt  prj.conf  prj_release.conf
applications/matter_weather_station/configuration/thingy53_nrf5340_cpuapp/: prj_ZDebug.conf
applications/matter_weather_station/src/: app_task.cpp  chip_project_config.h  weather-station.matter  weather-station.zap
applications/serial_lte_modem/src/: slm_at_host.c
cmake/: DFU_CUSTOM_HOOKS.md  DFU_PRE_EXECUTE_HOOKS.md  dfu_custom.cmake  dfu_extra.cmake  dfu_hooks.cmake  dfu_sysbuild_images.cmake
cmake/sysbuild/: custom_images.cmake  image_signing_extra.cmake  zip.cmake
doc/nrf/: ug_thread_tools.rst
doc/nrf/includes/: sample_fem_support.txt
doc/nrf/releases/: release-notes-latest.rst
modules/openthread/: Kconfig
modules/openthread/platform/: radio.c  radio_nrf5.c
samples/custom_dfu_example/: CMakeLists.txt  README.rst  sysbuild.cmake  sysbuild.conf
samples/custom_dfu_example/src/: main.c
samples/matter/light_bulb/: CMakeLists.txt  README.rst  VERSION  debug.overlay  overlay-debug.conf  prj.conf  prj_no_dfu.conf  prj_release.conf  settings_test.py
samples/matter/light_switch/: CMakeLists.txt  README.rst  prj.conf  prj_no_dfu.conf  prj_release.conf
samples/matter/lock/: CMakeLists.txt  README.rst  prj.conf  prj_no_dfu.conf  prj_release.conf
samples/matter/template/: CMakeLists.txt  Kconfig.sysbuild  README.rst  pm_static_nrf5340dk_nrf5340_cpuapp.yml  pm_static_nrf5340dk_nrf5340_cpuapp_ext_img.yml  pm_static_nrf5340dk_nrf5340_cpuapp_ext_img_single.yml  pm_static_nrf54l15dk_nrf54l15_cpuapp_ext_img.yml  pm_static_nrf54l15dk_nrf54l15_cpuapp_ext_img_single.yml  prj.conf  prj_no_dfu.conf  prj_release.conf  sysbuild.cmake  sysbuild.conf  sysbuild_ext_img.conf
samples/matter/thermostat/: CMakeLists.txt  prj.conf  prj_no_dfu.conf  prj_release.conf
samples/matter/window_covering/: CMakeLists.txt  VERSION  prj.conf  prj_no_dfu.conf  prj_release.conf
samples/sysbuild_dfu_example/: CMakeLists.txt  Kconfig.sysbuild  README.rst  sysbuild.cmake  sysbuild.conf
samples/sysbuild_dfu_example/external_mcu/: CMakeLists.txt  prj.conf
samples/sysbuild_dfu_example/sensor_controller/: CMakeLists.txt  prj.conf
samples/sysbuild_dfu_example/src/: main.c
scripts/: requirements-build.txt  requirements-fixed.txt
snippets/matter-debug/: matter_debug.conf
subsys/bluetooth/mesh/: light_ctrl_srv.c
subsys/bootloader/cmake/: packaging.cmake
subsys/net/openthread/: Kconfig.defconfig
sysbuild/: CMakeLists.txt  Kconfig.dfu  Kconfig.mcuboot  Kconfig.sysbuild
(+30 files in other folders)
